--- a/public/index.html
+++ b/public/index.html
@@ -97,8 +97,8 @@
 </div>
 
 <script>
-  const dataURL = "https://raw.githubusercontent.com/VexxuzzZ/ChaossDB/main/database.json";
-  const loginPassword = "vonzie123";
+  const dataURL = "https://raw.githubusercontent.com/VexxuzzZ/ChaosssDB/refs/heads/main/data/database.json";
+  const loginPassword = "KhususOwner";
 
   function checkLogin() {
     const pass = document.getElementById("loginPassword").value;
