--- a/public/index.html
+++ b/public/index.html
@@ -8,66 +8,66 @@
     * { box-sizing: border-box; font-family: 'Segoe UI', sans-serif; }
     body {
       margin: 0;
-      background: linear-gradient(270deg, #ff0080, #7928ca, #2afadf, #72f);
-      background-size: 800% 800%;
-      animation: rainbow 10s ease infinite;
+      background: radial-gradient(circle, #00f2fe, #4facfe, #0072ff);
+      background-size: cover;
       display: flex; justify-content: center; align-items: center;
       height: 100vh;
     }
-    @keyframes rainbow {
-      0%, 100% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-    }
     .box {
-      background: rgba(255, 255, 255, 0.95);
-      border-radius: 15px;
-      padding: 30px;
+      background: rgba(0, 0, 50, 0.9);
+      border: 2px solid #00f2fe;
+      border-radius: 12px;
+      padding: 25px;
       width: 95%;
       max-width: 400px;
-      box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 0 20px #00f2fe;
+      color: white;
       text-align: center;
     }
-    .box img {
-      width: 70px; margin-bottom: 15px;
-    }
-    h2 {
-      color: #5e17eb; margin-bottom: 20px;
-    }
+    h2 { margin-bottom: 20px; }
     input, button {
-      width: 100%; padding: 12px; margin-bottom: 12px;
-      border-radius: 8px; font-size: 16px; border: none;
+      width: 100%;
+      padding: 12px;
+      margin-bottom: 10px;
+      border-radius: 8px;
+      font-size: 16px;
+      border: none;
     }
-    input { border: 1px solid #ccc; }
+    input { border: 1px solid #00f2fe; }
     button {
-      background: #5e17eb; color: white; font-weight: bold; cursor: pointer;
+      background: #00c6ff; color: white;
+      font-weight: bold; cursor: pointer;
     }
-    button:hover { background: #4a12c2; }
-    .nav-button { display: flex; gap: 10px; margin-bottom: 15px; }
-    .nav-button button { flex: 1; }
-    table { width: 100%; margin-top: 15px; border-collapse: collapse; }
-    th, td { padding: 10px; border-bottom: 1px solid #ccc; text-align: left; }
+    button:hover { background: #0084ff; }
+    table {
+      width: 100%;
+      margin-top: 15px;
+      border-collapse: collapse;
+      color: white;
+    }
+    th, td {
+      padding: 10px;
+      border-bottom: 1px solid #00f2fe;
+    }
     footer {
       margin-top: 20px;
-      font-size: 14px; color: #555;
+      font-size: 14px;
     }
-    footer a {
-      color: #5e17eb;
-      text-decoration: none;
-    }
+    a { color: #00f2fe; text-decoration: none; }
     #tambahSection { display: none; }
+    .nav-button { display: flex; gap: 10px; margin-bottom: 15px; }
+    .nav-button button { flex: 1; }
   </style>
 </head>
 <body>
 
 <div class="box" id="loginBox">
-  <img src="https://cdn-icons-png.flaticon.com/512/6195/6195699.png" alt="Logo" />
   <h2>Login Panel</h2>
   <input type="password" id="loginPassword" placeholder="Masukkan Password">
   <button onclick="checkLogin()">Login</button>
 </div>
 
 <div class="box" id="mainBox" style="display:none;">
-  <img src="https://cdn-icons-png.flaticon.com/512/6195/6195699.png" alt="Logo" />
   <h2>Vonzie Database</h2>
 
   <div class="nav-button">
@@ -75,7 +75,6 @@
     <button onclick="toggleSection('tambah')">➕ Tambah Nomor</button>
   </div>
 
-  <!-- View Section -->
   <div id="viewSection">
     <input type="text" id="searchInput" placeholder="Cari nomor..." onkeyup="cariNomor()">
     <table>
@@ -84,7 +83,6 @@
     </table>
   </div>
 
-  <!-- Tambah Section -->
   <div id="tambahSection">
     <input type="text" id="inputNomor" placeholder="Masukkan nomor baru...">
     <button onclick="tambahNomor()">Tambahkan</button>
@@ -97,8 +95,7 @@
 </div>
 
 <script>
-  const dataURL = "https://raw.githubusercontent.com/VexxuzzZ/ChaosssDB/refs/heads/main/data/database.json";
-  const loginPassword = "KhususOwner";
+  const loginPassword = "vonzie123";
 
   function checkLogin() {
     const pass = document.getElementById("loginPassword").value;
@@ -117,7 +114,7 @@
   }
 
   function loadData() {
-    fetch(dataURL)
+    fetch("/api/get")
       .then(res => res.json())
       .then(data => {
         const isiTabel = document.getElementById("isiTabel");
@@ -126,9 +123,8 @@
           isiTabel.innerHTML += `<tr><td>${item.nomor}</td></tr>`;
         });
       })
-      .catch(err => {
-        console.error("Gagal memuat data:", err);
-        document.getElementById("isiTabel").innerHTML = "<tr><td>Gagal memuat data.</td></tr>";
+      .catch(() => {
+        document.getElementById("isiTabel").innerHTML = "<tr><td>Gagal muat data</td></tr>";
       });
   }
 
@@ -144,8 +140,21 @@
     const nomor = document.getElementById("inputNomor").value.trim();
     if (!nomor) return alert("Nomor kosong!");
 
-    alert("⚠️ Tambah nomor ke GitHub tidak bisa langsung tanpa backend. Pakai Firebase/API!");
-    document.getElementById("inputNomor").value = "";
+    fetch("/api/add", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ nomor })
+    })
+    .then(res => res.json())
+    .then(data => {
+      if (data.success) {
+        alert("✅ Nomor berhasil ditambahkan!");
+        document.getElementById("inputNomor").value = "";
+        loadData();
+      } else {
+        alert("❌ Gagal: " + data.error);
+      }
+    });
   }
 </script>
 
